[package]
name = "vanward"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vanward"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git" }
getrandom = { version = "0.2.9", features = ["custom"] }
solana-program = "=1.14.20"
winnow="=0.4.1"
toml_datetime="=0.6.1"
mpl-token-metadata = { version="1.2.5", features = [ "no-entrypoint" ] }
anchor-idl = "0.3.1"
