[package]
description = "Created with Anchor"
edition = "2021"
name = "vanward"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "vanward"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
# anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", features = ["metadata"] }
anchor-spl = {version = "0.29.0", features = ["metadata"]}
# solana-program = "=1.14.17"
# winnow="=0.4.1"
# toml_datetime="=0.6.1"
mpl-token-metadata = {version = "1.13.1", features = ["no-entrypoint"]}
# mpl-token-metadata = "1.13.1"
